  this is was unique example of a thread-unsafe-by-design method.


OTHER CHANGES
=============

2.4.2
-----

All:

- always NUL-terminate the log messages
- wxRegEx::Compile() now calculates the number of groups correctly
- wxHTTP::GetHeader() didn't find headers which not all in upper case

All (GUI):

- rare crash in wxFontMapper fixed (Robert Vazan)
- Added wxMenu::FindItemByPosition.

Generic:

- wxListCtrl: respect wxLC_NO_HEADER style when inserting first column

Unix:

- fixed build problems with OpenGL when libGL(U) were in different directories
- added --basename and --release flags to wx-config (Robert O'Connor)
- added support for GNU/Hurd in configure
- changed wxNativeFontInfo::FromXFontName to treat names with all
  components being empty or '*' as default font (since default font is
  converted to such a string by GetXFontName).


wxGTK

- fixed compilation with --disable-compat-22
- set the event object correctly for wxMenu events (Bob Balfour)

wxMSW:

- compilation fix for VC++ command line build (missing version.mak)
- fixed release mode build with VC 7.x (Martin Ecker)
- fix iostream.h problem with VC 7.1 (it doesn't support it any longer) 
- compilation fix for XRC with mingw32

wxMotif:

- fixed "make install"


2.4.1
-----

All:

- fixed wxLANGUAGE_CHINESE_TAIWAN to use zh_TW catalogs
- added missing wx/quantize.h to install
- improved wxScrolledWindow/sizer interaction
- fixed assert (and crash in debug) in wxFileConfigGroup::DeleteSubgroupByName
- fix for deleting entries at root level in wxFileConfig
- wxStopWatch::Start() didn't resume it contrary to the docs
- accept '\r' as delimiter when parsing dates
- fixed duplicate wxFontEncoding values
- wxFileConfig now always uses UTF-8 to store settings in Unicode build;
  it will be possible to set different charset in wxWindows >= 2.5.0
- added wxFileName::MakeAbsolute
- bugs in wxCalCtrl fixed (year not being updated)

Unix (GUI):

- fixed the "close" button of dialogs under KDE 3.1